# slam-standalone

./: .gitignore  .gitmodules  setup.sh
Pangolin-0.6/: myBuild.sh
Pangolin-0.6/src/: CMakeLists.txt  PangolinConfig.cmake.in
Sophus-master/: myBuild.sh
boost_1_79_0/: b2  project-config.jam  project-config.jam.1  project-config.jam.3
boost_1_79_0/bin.v2/: project-cache.jam
boost_1_79_0/bin.v2/libs/nowide/config/gcc-9/release/threading-multi/visibility-hidden/: lfs_support
ceres-solver-2.1.0/: AndroidBuild.sh  CMakeLists.txt  myBuild.sh
ceres-solver-2.1.0/cmake/: CeresThreadingModels.cmake  FindCXSparse.cmake  FindMETIS.cmake  FindSuiteSparse.cmake
dvo_core/: CMakeLists.txt  dvo_test_tum.cpp  myBuild.sh
dvo_core/include/dvo/util/: stopwatch.h
dvo_core/include/dvo/visualization/: camera_trajectory_visualizer.h
dvo_core/include/dvo_benchmark/: groundtruth.h  rgbd_pair.h  tools.h
dvo_core/include/dvo_benchmark/MessageType/custom_msgs/: OdometryWithPointCloud.h
dvo_core/include/dvo_benchmark/MessageType/geometry_msgs/: Point.h  Point32.h  PointStamped.h  Pose.h  PoseStamped.h  PoseWithCovariance.h  Quaternion.h  Twist.h  TwistWithCovariance.h  Vector3.h  Vector3Stamped.h
dvo_core/include/dvo_benchmark/MessageType/nav_msgs/: Odometry.h  Path.h
dvo_core/include/dvo_benchmark/MessageType/rostime/: duration.h  rate.h  time.h
dvo_core/include/dvo_benchmark/MessageType/rostime/impl/: duration.hxx  time.hxx
dvo_core/include/dvo_benchmark/MessageType/sensor_msgs/: ChannelFloat32.h  CompressedImage.h  Image.h  Imu.h  PointCloud.h  image_encodings.h
dvo_core/include/dvo_benchmark/MessageType/std_msgs/: Bool.h  ColorRGBA.h  Duration.h  Header.h  Time.h
dvo_core/include/dvo_benchmark/MessageType/visualization_msgs/: Marker.h  MarkerArray.h
dvo_core/src/core/: rgbd_image.cpp
dvo_core/src/rostime/: duration.cpp  rate.cpp  time.cpp
dvo_core/src/visualization/: pcl_camera_trajetory_visualizer.cpp  point_cloud_aggregator.cpp
dvo_core/vss/: vss.cpp  vss.h  vss_impl.cpp  vss_impl.h
eigen-3.4.0/: AndroidBuild.sh  CMakeLists.txt  myBuild.sh
eigen-3.4.0/bench/btl/libs/BLAS/: CMakeLists.txt
eigen-3.4.0/test/: CMakeLists.txt
gflags-master/: AndroidBuild.sh  CMakeLists.txt  myBuild.sh
glog-master/: AndroidBuild.sh  CMakeLists.txt  myBuild.sh
glog-master/test-run-time/: CMakeLists.txt  test.cpp
opencv-4.5.5/: AndroidBuild.sh  CMakeLists.txt  myBuild.sh
opencv-4.5.5/cmake/: OpenCVVersion.cmake
pcl-master/: CMakeLists.txt  myBuild.sh
suitesparse-metis-for-windows/: AndroidBuild.sh  CMakeLists.txt  myBuild.sh
suitesparse-metis-for-windows/SuiteSparse/CHOLMOD/: CMakeLists.txt
test-dependencies/: CMakeLists.txt  glog-eigen-usage.cpp  myBuild.sh
